feat(admin): continued development of  notification feature